--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,13 +1,13 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Rassen
+    <%= plural_table_name %>
     <small>Anzeigen</small>
   </h1>
   <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> Stammdaten</a></li>
-    <li><%= link_to 'Rassen', races_path, :class => 'active'%></li>
-    <li class="active"><%= @race.name %></li>
+    <li><%= link_to '<%= plural_table_name %>', <%= plural_table_name %>_path, :class => 'active'%></li>
+    <li class="active"><%= @<%= singular_table_name %>.name %></li>
   </ol>
 </section>
 <!-- Main content -->
@@ -35,22 +35,18 @@
         </div>
         <!-- /.box-header -->
         <div class="box-body">
-          <%= form_with(model: @race, local: true) do |form| %>
+          <%= form_with(model: @<%= singular_table_name %>, local: true) do |form| %>
             <div class="field">
               <% attributes.reject(&:password_digest?).each do |attribute| -%>
                 <%%= form.label :@<%=attribute.human_name %> %>:
-                <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
+                <%%= form.text_field :<%= attribute.name %>, id: :<%= singular_table_name %>_<%= attribute.name %>, class:"form-control", disabled:true %>
               <% end -%>
-              <%= form.label :id %>
-              <%= form.text_field :id, id: :race_id, class:"form-control", disabled:true %>
-              <%= form.label :name %>
-              <%= form.text_field :name, id: :race_name, class:"form-control", disabled:true %>
             </div>
           <% end %>
         </div><!-- /.box-body -->
         <div class="box-footer">
-          <%= link_to 'Bearbeiten', edit_race_path(@race), :class => 'btn btn-primary btn-flat btn-sm pull-right' %>
-          <%= link_to 'Zurück zur Übersicht', races_path, :class => 'btn btn-default btn-flat btn-sm pull-left'%>
+          <%= link_to 'Bearbeiten', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-primary btn-flat btn-sm pull-right' %>
+          <%= link_to 'Zurück zur Übersicht', <%= index_helper %>_path, :class => 'btn btn-default btn-flat btn-sm pull-left'%>
         </div>
       </div><!-- /.box -->
     </div>
@@ -58,9 +54,3 @@
 
   <br>
 </section><!-- /.content -->
-
-<p id="notice"><%%= notice %></p>
-
-
-<%%= link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>) %> |
-<%%= link_to 'Back', <%= index_helper %>_path %>
