--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -36,7 +36,8 @@
       <li class="treeview">
         <a href="#"><i class='fa fa-link'></i> <span>Stammdaten</span> <i class="fa fa-angle-left pull-right"></i></a>
         <ul class="treeview-menu">
-          <li><a href="#">Rassen</a></li>
+          <li><%= link_to 'Rassen', races_path %></li>
+          <li><%= link_to 'Persontypen', persontypes_path %></li>
           <li><a href="#">Link in level 2</a></li>
         </ul>
       </li>
