--- a/app/views/persontypes/new.html.erb
+++ b/app/views/persontypes/new.html.erb
@@ -1,32 +1,32 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    <%= plural_table_name %>
-    <small>Bearbeiten</small>
+    Persontypen
+    <small>Erstellen</small>
   </h1>
   <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> Stammdaten</a></li>
-    <li><%%= link_to 'Rassen', <%= plural_table_name %>_path, :class => 'active'%></li>
-    <li class="active"><%%= @<%= singular_table_name %>.name %></li>
+    <li><%= link_to 'Persontypen', persontypes_path, :class => 'active'%></li>
+    <li class="active">Neu</li>
   </ol>
 </section>
 <!-- Main content -->
 <section class="content">
-  <%% if notice %>
+  <% if notice %>
     <div class="alert alert-success alert-dismissable">
       <i class="fa fa-check"></i>
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-      <b><%%= notice %></b>
+      <b><%= notice %></b>
     </div>
-  <%% end %>
+  <% end %>
 
-  <%% if alert %>
+  <% if alert %>
     <div class="alert alert-danger alert-dismissable">
       <i class="fa fa-ban"></i>
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-      <b><%%= alert %></b>
+      <b><%= alert %></b>
     </div>
-  <%% end %>
+  <% end %>
 
   <div class="row">
     <div class="col-xs-12">
@@ -34,7 +34,7 @@
         <div class="box-header">
         </div>
         <!-- /.box-header -->
-        <%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %> %>
+        <%= render 'form', persontype: @persontype %>
       </div><!-- /.box -->
     </div>
   </div>
