--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -38,6 +38,7 @@
         <ul class="treeview-menu">
           <li><%= link_to 'Rassen', races_path %></li>
           <li><%= link_to 'Persontypen', persontypes_path %></li>
+          <li><%= link_to 'Personen', people_path %></li>
           <li><a href="#">Link in level 2</a></li>
         </ul>
       </li>
