--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,12 +1,12 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Persontypen
+    Personen
     <small>Übersicht</small>
   </h1>
   <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> Stammdaten</a></li>
-    <li class="active">Persontypen</li>
+    <li class="active">Personen</li>
     <li class="active">Übersicht</li>
   </ol>
 </section>
@@ -32,7 +32,7 @@
     <div class="col-xs-12">
       <div class="box">
         <div class="box-header">
-          <%= link_to 'Neuer Persontyp', new_persontype_path, :class => 'btn btn-success btn-flat btn-sm' %>
+          <%= link_to 'Neue Person', new_person_path, :class => 'btn btn-success btn-flat btn-sm' %>
           <div class="box-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
               <input type="text" name="table_search" class="form-control pull-right" placeholder="Suche">
@@ -48,21 +48,35 @@
           <table class="table table-hover">
             <tr>
               <th>ID</th>
-              <th>Persontyp</th>
-              <th>Aktion</th>
+                              <th>Nachname</th>
+                              <th>Vorname</th>
+                              <th>Email</th>
+                              <th>Phone</th>
+                              <th>Straße</th>
+                              <th>PLZ</th>
+                              <th>Ort</th>
+                              <th>Persontype</th>
+                            <th>Aktion</th>
             </tr>
-            <% @persontypes.each do |persontype| %>
+            <% @people.each do |person| %>
               <tr>
-                <td><%= persontype.id %></td>
-                <td><%= persontype.persontype %></td>
-                <td>
-                    <%= link_to persontype do %>
+                <td>person.id</td>
+                                  <td><%= person.lastname %></td>
+                                  <td><%= person.firstname %></td>
+                                  <td><%= person.email %></td>
+                                  <td><%= person.phone %></td>
+                                  <td><%= person.street %></td>
+                                  <td><%= person.PLZ %></td>
+                                  <td><%= person.city %></td>
+                                  <td><%= person.persontype %></td>
+                                <td>
+                    <%= link_to person do %>
                       <span class="btn btn-success btn-flat btn-xs"><i class="fa fa-eye"></i></span>
                     <% end %>
-                    <%= link_to edit_persontype_path(persontype) do %>
+                    <%= link_to edit_person_path(person) do %>
                       <span class="btn btn-primary btn-flat btn-xs"><i class="fa fa-edit"></i></span>
                     <% end %>
-                    <%= link_to persontype, method: :delete, data: { confirm: 'Sind Sie sicher?' } do %>
+                    <%= link_to person, method: :delete, data: { confirm: 'Sind Sie sicher?' } do %>
                       <span class="btn btn-danger btn-flat btn-xs"><i class="fa fa-trash-o"></i></span>
                     <% end %>
                 </td>
